@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1354832: import ical - first edited event multiplies
       1356024: event link in Activity log - NOT FOUND error
       1356541: ics-import will not correctly handle 'private'-entries
       1355655: Task Completed dates not stored properly
